[feat] modal page for add new period

--- a/src/app/components/buttons-panel/buttons-panel.component.html
+++ b/src/app/components/buttons-panel/buttons-panel.component.html
@@ -2,5 +2,6 @@
   <app-button *ngFor="let button of buttons"
               [title]='button.title'
               [icon]="button.icon"
-              [buttonClass]="button.buttonClass"></app-button>
+              [buttonClass]="button.buttonClass"
+              (click)="button.click($event)"></app-button>
 </div>
