--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -2,6 +2,8 @@
   position: relative;
   overflow: hidden;
 
+  height: 100%;
+
   .button {
     height: 100%;
     font-family: 'Manrope', sans-serif;
@@ -17,6 +19,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     .button__icon {
       font-size: 25px;
@@ -32,7 +35,7 @@
 
   &.fill {
     background: radial-gradient(122.27% 198.92% at -22.27% -27.38%, #0070BA 0%, #1546A0 100%);
-    box-shadow: 0px 24px 48px -18px rgba(21, 70, 160, 0.5);
+    box-shadow: 0 24px 48px -18px rgba(21, 70, 160, 0.5);
     border-radius: 20px;
   }
 
