--- a/src/app/components/date-field/date-field.component.html
+++ b/src/app/components/date-field/date-field.component.html
@@ -1,17 +1,36 @@
-<ion-item [formGroup]="formGroup">
-	<ion-label position="floating">{{field.label}}</ion-label>
-	<ion-input
-		value="{{ formGroup.value.date | date:'dd.MM.yyyy' }}"
-		id="date"
-		class="ion-text-end"
-	></ion-input>
-	<ion-popover trigger="{{field.type}}" size="cover">
-		<ng-template>
-			<ion-datetime
-				presentation="date"
-				formControlName="{{field.type}}"
-				locale="ru-RU"
-			></ion-datetime>
-		</ng-template>
-	</ion-popover>
-</ion-item>
+<!--<ion-item [formGroup]="formGroup">-->
+<!--	<ion-label position="floating">{{field.label}}</ion-label>-->
+<!--	<ion-input-->
+<!--		value="{{ formGroup.value.date | date:'dd.MM.yyyy' }}"-->
+<!--		id="date"-->
+<!--		class="ion-text-end"-->
+<!--	></ion-input>-->
+<!--	<ion-popover trigger="{{field.type}}" size="cover">-->
+<!--		<ng-template>-->
+<!--			<ion-datetime-->
+<!--				presentation="date"-->
+<!--				formControlName="{{field.type}}"-->
+<!--				locale="ru-RU"-->
+<!--			></ion-datetime>-->
+<!--		</ng-template>-->
+<!--	</ion-popover>-->
+<!--</ion-item>-->
+
+	<div class="wrapper">
+		<button
+			tuiIconButton
+			type="button"
+			title="Choose a date"
+			appearance="secondary"
+			shape="rounded"
+			icon="tuiIconCalendarLarge"
+			(click)="onClick()"
+		></button>
+		<span
+			class="date"
+			[class.date_empty]="empty"
+		>
+        {{date$ | async}}
+    </span>
+	</div>
+
