[feat] sign & styling

--- a/src/app/components/date-field/date-field.component.html
+++ b/src/app/components/date-field/date-field.component.html
@@ -16,7 +16,7 @@
 <!--	</ion-popover>-->
 <!--</ion-item>-->
 
-	<div class="wrapper">
+	<div class="input__wrapper">
 		<button
 			tuiIconButton
 			type="button"
