--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,4 +1,4 @@
-<ng-container [formGroup]="formGroup">
+<div class="input__wrapper" [formGroup]="formGroup">
 <!--	<label class="input__label">{{field.label}}</label>-->
 <!--	<input class="input__field" type="{{field.type}}" placeholder="{{field.placeholder}}"-->
 <!--		   formControlName="{{field.name}}"/>-->
@@ -23,5 +23,5 @@
 	<tui-field-error
 		formControlName="{{field.name}}"
 	></tui-field-error>
-</ng-container>
+</div>
 
